// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuyPage Actions loadPrice action should loadPrice should create loadPrice action 1`] = `
Object {
  "payload": Object {
    "coin": "coin",
  },
  "type": "dicoapp/BuyPage/LOAD_PRICE",
}
`;

exports[`BuyPage Actions loadPrices action should loadPrices should create loadPrices action 1`] = `
Object {
  "type": "dicoapp/BuyPage/LOAD_PRICES",
}
`;

exports[`BuyPage Actions loadPricesSuccess action should loadPricesSuccess should create loadPricesSuccess action 1`] = `
Object {
  "type": "dicoapp/BuyPage/LOAD_PRICES_SUCCESS",
}
`;
